[package]
name = "laby_macros"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "HTML transformation macros for laby"
repository = "https://github.com/chiyadev/laby"
exclude = ["html_docs/content/*"]

[lib]
proc-macro = true

[features]
decl_macro = []

[dependencies]
laby_common = { path = "../laby_common", version = "0.1.1" }
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
